--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,7 @@
     <string name="url_field_hint">Url</string>
     <string name="helper_generic_text">This field is required</string>
     <string name="checkbox_text">Enable password</string>
+    <string name="card_toggle_red">Red</string>
+    <string name="card_toggle_blue">Blue</string>
+    <string name="card_toggle_green">Green</string>
 </resources>
